# reachy-mini-desktop-app

./: .cursorignore  .gitignore  ANALYSE_ARCHITECTURE_ET_CODE_MORT.md  ANALYSE_PERFORMANCE_ET_QUALITE.md  ANALYSE_SYSTEME_UPDATE.md  ARCHITECTURE_REVIEW.md  DIAGNOSTIC_BLOQUAGE_UPDATE.md  DIAGNOSTIC_EXPRESSIONS_SECTION.md  JOYSTICK_INVERSION_STATE.md  JOYSTICK_ORIENTATION_ANALYSIS.md  LICENCE  MACOS_SIGNING_ANALYSIS.md  NETTOYAGE_CODE_MORT.md  NETWORK_PERMISSIONS_REPORT.md  PLAN_AMELIORATION_ARCHITECTURE.md  PROPOSITIONS_REORGANISATION.md  PROPOSITION_FLUX_ASYNCHRONES.md  RAPPORT_ACCES_INTERNET.md  RAPPORT_ARCHITECTURE.md  RAPPORT_CYCLE_VIE_DAEMON.md  RAPPORT_FICHIERS_INUTILISES.md  RAPPORT_USAGE_FRANCAIS.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PLAN.md  REFACTORING_PLAN_COMPLET.md  REVUE_CODE_UPDATE.md  TAURI_SIGNING_COMPARISON.md  TAURI_SIGNING_DETAIL_ANALYSIS.md  build_sidecar_unix.sh  build_sidecar_windows.ps1  check-daemon.sh  index.html  kill-daemon.sh  package-lock.json  package.json
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  python-entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  secondary-windows.json
src-tauri/dmg-assets/: README.md
src-tauri/linux/: 99-reachy-mini.rules  deb-postinst.sh  deb-postrm.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/python/: mod.rs
src-tauri/src/signing/: mod.rs
src-tauri/src/usb/: mod.rs
src-tauri/src/window/: mod.rs
(+328 files in other folders)
