[package]
name = "reachy-mini-control"
version = "0.3.19"
description = "Reachy Mini Control Application"
authors = ["Reachy Mini Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reachy_mini_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-positioner = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.0"
# Removed tauri-plugin-macos-permissions - using custom implementation in src/permissions/mod.rs
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.2"
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
block = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

